style: layout login and register

--- a/frontend/src/styles/reset.css
+++ b/frontend/src/styles/reset.css
@@ -1,7 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap');
-* {
-  font-family: 'Roboto', sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0-modified | 20110126
    License: none (public domain)
@@ -370,11 +367,14 @@ textarea {
 }
 * {
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
+
 body {
     overflow-y: hidden;
 }
 #root {
     height: 100vh;
+    overflow-x: hidden;
     overflow-y: auto;
 }
