--- a/frontend/src/components/Layout/Modal/modal.module.scss
+++ b/frontend/src/components/Layout/Modal/modal.module.scss
@@ -5,39 +5,57 @@
   width: 100%;
   height: 100%;
   z-index: 9999;
-  opacity: 0;
-  transition: .3s cubic-bezier(0.075, 0.82, 0.165, 1);
-  background-color: rgba($color: #000000, $alpha: 0.2);
+  display: none;
+  background-color: rgba($color: #000000, $alpha: 0.5);
   .content {
     top: 50%;
     left: 50%;
-    opacity: 0;
-    padding: 20px;
+    width: 100%;
+    max-height: 100%;
     position: absolute;
     border-radius: 1em;
+    overflow-y: auto;
     background-color: #fff;
     transform-origin: top left;
-    transform: scale(0.5) translate(-50%, -40%);
-    transition: .3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    transform: translate(-50%, -50%);
     box-shadow: 0 0 10px rgba($color: #000000, $alpha: 0.2);
     &, &.sm {
-      width: 370px;
       max-width: 370px;
     }
     &.md {
-      width: 500px;
       max-width: 500px;
     }
     &.lg {
-      width: 800px;
       max-width: 500px;
+    }
+    .btnClose {
+      width: 32px;
+      height: 32px;
+      border: none;
+      background-color: #ddd;
+      border-radius: 50%;
+      position: absolute;
+      right: 5px;
+      top: 5px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      &:hover {
+        background-color: rgb(198, 193, 193);
+      }
+    }
+    .header {
+      padding: 20px 35px;
+      text-align: center;
+      font-size: 25px;
+      font-weight: 600;
+      border-bottom: 2px solid #ddd;
+    }
+    .body {
+      padding: 20px;
     }
   }
   &.show {
-    opacity: 1;
-    .content {
-      opacity: 1;
-      transform: scale(1) translate(-50%, -50%);
-    }
+    display: block;
   }
 }
