--- a/frontend/src/components/Layout/Header/header.module.scss
+++ b/frontend/src/components/Layout/Header/header.module.scss
@@ -115,6 +115,10 @@
             background-color: rgb(211, 209, 209);
           }
         }
+        a {
+          color: #000;
+          text-decoration: none;
+        }
       }
     }
   }
