--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -15,3 +15,12 @@ body {
   height: auto;
   object-fit: cover;
 }
+.m-auto {
+  margin: 0 auto;
+}
+.mt-3 {
+  margin-top: 1.25em;
+}
+.form-350 {
+  max-width: 350px;
+}
