feat: update user and upload file

--- a/frontend/src/components/Layout/Button/button.module.scss
+++ b/frontend/src/components/Layout/Button/button.module.scss
@@ -4,7 +4,6 @@ $second: #E02401;
   outline: none;
   border-radius: 10px;
   border: none;
-  background-color: none;
   padding: 0.3em 1.25em;
   line-height: 1.5em;
   font-weight: 700;
@@ -14,7 +13,13 @@ $second: #E02401;
   width: 100%;
   display: block;
 }
-
+.link {
+  border: none;
+  background: none;
+  color: rgb(39, 39, 39);
+  padding: 0 10px;
+  line-height: 1;
+}
 @mixin buildVariant($color, $variant) {
   .#{$variant} {
     border: 2px solid $color;
@@ -45,17 +50,3 @@ $second: #E02401;
 }
 @include buildVariant($primary, 'primary');
 @include buildVariant($second, 'second');
-
-.loader {
-  margin: 0 auto;
-  border: 2px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 2px solid #3498db;
-  width: 24px;
-  height: 24px;
-  animation: spin 1.5s linear infinite;
-}
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
