--- a/frontend/src/components/Layout/Form/form.module.scss
+++ b/frontend/src/components/Layout/Form/form.module.scss
@@ -26,6 +26,9 @@
 .formText {
   font-size: 12px;
   padding: 5px;
+  &.normal {
+    color: rgb(142, 142, 142);
+  }
   &.error {
     color: red;
   }
