--- a/frontend/src/components/Layout/Header/header.module.scss
+++ b/frontend/src/components/Layout/Header/header.module.scss
@@ -74,8 +74,6 @@
 }
 .user {
   position: relative;
-  border-radius: 50%;
-
   .avatar {
     height: 42px;
     width: 42px;
@@ -83,55 +81,16 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    border-radius: 50%;
+    overflow: hidden;
     img {
-      height: 42px;
-      width: 42px;
-      min-height: 42px;
-      min-width: 42px;
+      height: 100%;
+      width: 100%;
       object-fit: cover;
-      border-radius: 50%;
+    }
+    &:hover {
+      background-color: #ddd;
     }
   }
-  .menu {
-    position: absolute;
-    top: 100%;
-    right: -300px;
-    opacity: 0;
-    transition: .3s cubic-bezier(0.165, 0.84, 0.44, 1);
-    ul {
-      width: 200px;
-      background-color: #fff;
-      margin-top: 10px;
-      padding: 10px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba($color: #000000, $alpha: 0.2);
-      li {
-        padding: 0.5em;
-        &.main {
-          color: rgb(49, 49, 49);
-          font-weight: 400;
-          font-size: 14px;
-        }
-        &:not(.main) {
-          font-weight: bolder;
-          cursor: pointer;
-          &:hover {
-            border-radius: 5px;
-            background-color: rgb(211, 209, 209);
-          }
-        }
-        a {
-          color: #000;
-          text-decoration: none;
-        }
-      }
-    }
-  }
-  &:hover {
-    background-color: #ddd;
-    .menu {
-      opacity: 1;
-      right: 0;
-    }
-  }
+
 }
