--- a/frontend/src/components/Settings/settings.module.scss
+++ b/frontend/src/components/Settings/settings.module.scss
@@ -1,5 +1,6 @@
 .settings {
   display: flex;
+  flex-flow: wrap;
   margin: 30px 0;
 }
 .tabDirection {
@@ -13,7 +14,7 @@
       padding: 10px;
       border-radius: 10px;
       cursor: pointer;
-      &:hover {
+      &.active, &:hover {
         background-color: #ddd;
       }
     }
@@ -24,7 +25,7 @@
   padding: 10px;
   .form480 {
     max-width: 480px;
-    width: 480px;
+    width: 100%;
   }
 }
 .title {
