--- a/frontend/src/components/GridImage/image.module.scss
+++ b/frontend/src/components/GridImage/image.module.scss
@@ -14,7 +14,7 @@
       padding: 0 5px;
       overflow: hidden;
       font-size: 14px;
-      font-weight: bolder;
+      font-weight: 500;
       a {
         color: #000;
         text-decoration: none;
