--- a/frontend/src/components/Collection/collection.module.scss
+++ b/frontend/src/components/Collection/collection.module.scss
@@ -8,6 +8,7 @@
 .listCollection {
   display: grid;
   grid-template-columns: repeat(6, calc(100% / 6));
+  padding-bottom: 20px;
   @media (max-width: 375px) {
     grid-template-columns: 100%;  
   }
@@ -49,16 +50,25 @@
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;  
-    line-height: 35px;
-    height: 35px;
+    line-height: 38px;
+    height: 38px;
     overflow: hidden;
     font-size: 20px;
+    padding: 0 5px;
     a { 
       color: #000;
       text-decoration: none;
       &:hover {
         text-decoration: underline;
       }
+    }
+  }
+  .moreInfomation {
+    padding: 0 5px;
+    font-size: 11px;
+    .time {
+      padding-left: 5px;
+      color: rgb(142, 142, 142);
     }
   }
   .actions {
